added social links

--- a/index.html
+++ b/index.html
@@ -417,15 +417,14 @@
         </div>
         <ul class="social-profiles">
           <li class="github footer-link">
-            <a href="" target="_blank" class="social-link">
-              <ion-icon class="footer-icon" name="logo-github"></ion-icon>
+            <a href="https://github.com/anudeep-gad12/covid-statistics" target="_blank" class="social-link">
+            <ion-icon class="footer-icon" name="logo-github"></ion-icon>
               
             </a>
           </li>
           <li class="linkedIn footer-link">
-            <a href="" target="_blank" class="social-link">
-              <ion-icon class="footer-icon" name="logo-linkedin">
-                https://www.linkedin.com/in/anudeepgadige/
+            <a href="https://www.linkedin.com/in/anudeepgadige/" target="_blank" class="social-link">
+            <ion-icon class="footer-icon" name="logo-linkedin">     
               </ion-icon>
             </a>
           </li>
